@@ -2,6 +2,7 @@ Revision history for TPath::Forester::Ref
 
 {{$NEXT}}
   * made dsel sensitive to array context
+  * refactored to use new TPath API
 
 0.001     2013-03-10 20:40:41 EST5EDT
   * first release
